# mosquito_object_detection

./: .gitignore  README.md  pyproject.toml
config/: mosquito_alert.yaml
scripts/: data_prep.py  data_restructurer.py
src/mosquito_object_detection/: class_train.py  class_tune.py  classification_train.py  predict.py  train.py  tune.py
